[package]
name = "koreader-sync-rs"
version = "0.1.0"
edition = "2021"
authors = [ "Youkou Tenhouin <youkou@tenhou.in>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.3.4", features=['http', 'axum', 'd1'] }
worker-macros = { version="0.3.4", features=['http'] }
axum  = { version = "0.7", default-features = false, features=['json', 'query'] }
serde = { version = "1.0", features=['derive'] }
serde_json = "1.0"
tower-service = "0.3.2"
console_error_panic_hook = { version = "0.1.1" }
chrono = { version = "0.4.38", features=['wasmbind'] }
argon2 = "0.5.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ['js'] }